--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color Flicker</title>
+    <title>Color Flipper</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./icons/palette.svg" type="image/x-icon" />
     <!--Google icon-->
     <link
       rel="stylesheet"
